--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,17 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin: 0;
+}
+
+button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 img {
   max-width: 100%;
 }
@@ -71,4 +82,32 @@ body {
   min-width: 320px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+}
+
+/* glob */
+.container {
+  max-width: 1800px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.list-reset {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.section-title {
+  margin: 0;
+  font-weight: 400;
+  font-size: 48px;
+  color: #000;
+}
+
+.subtitle {
+  margin: 0;
+  font-weight: 700;
+  font-size: 24px;
+  color: #000;
 }
