--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,7 @@ body {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+  color: #ef2a82;
 }
 
 .list-reset {
@@ -435,3 +436,8 @@ body {
   font-size: 24px;
   color: #000;
 }
+
+.header {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}/*# sourceMappingURL=style.css.map */
