--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -408,19 +408,17 @@ body {
   font-weight: 400;
 }
 
-/* glob */
 .container {
   max-width: 1800px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-  color: #ef2a82;
 }
-
-.list-reset {
-  padding: 0;
-  margin: 0;
+.container ul,
+.container ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .section-title {
