--- a/styles/scss/_common.scss
+++ b/styles/scss/_common.scss
@@ -1,4 +1,3 @@
-
 html {
   box-sizing: border-box;
 }
@@ -31,23 +30,20 @@ img {
 
 body {
   min-width: 320px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
 
-/* glob */
 .container {
   max-width: 1800px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-  color: $pink;
-}
 
-.list-reset {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  ul,
+  ol {
+    @include listReset;
+  }
 }
 
 .section-title {
@@ -63,4 +59,3 @@ body {
   font-size: 24px;
   color: #000;
 }
-
