--- a/css/style.css
+++ b/css/style.css
@@ -408,17 +408,18 @@ body {
   font-weight: 400;
 }
 
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   max-width: 1800px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
-}
-.container ul,
-.container ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .section-title {
